	* Added new example "Stars.pde" 
	* Added Bitmap Support (example "Walk.pde")
	* Less flash ROM required (functions put into individual files)
	* Fixed bug in drawArc (w0 > w1)
	* Added GraphicsTest.pde
2010-07-18	v1.02	Oliver Kraus <olikraus@gmail.com>
	* removed unrequired file
2010-08-19	v1.03	Oliver Kraus <olikraus@gmail.com>
	* Code update: Use DOG_WIDTH if required
	* Support for DOGM132 and DOGS102
	* New levels 4 & 5 for Breakorino
	* Added SPI abstraction layer (dogmspi.c)
	* More generic delay procedure (dog_delay())
	* clrHLine, xorHLine
2010-09-05	v1.04	Oliver Kraus <olikraus@gmail.com>
	* Renamed dog_delay() --> dog_Delay() 
	* Renamed dog_init() --> dog_Init()
	* Renamed dog_set_inverse() --> dog_SetInvertPixelMode()
	* Renamed dog_set_contrast() --> dog_SetContrast()
	* Renamed dog_get_char_width() --> dog_GetCharWidth()
	* Renamed dog_get_str_width() --> dog_GetStrWidth()
	* Port to Atmel AVR ATTINY84 
2010-09-18	v1.05	Oliver Kraus <olikraus@gmail.com>
	* Breakorino bugfix (remember last reflection)
        * Display orientation: DOG_REVERSE
	* Put some tables into flashrom, marked some functions as static --> reduced RAM/ROM usage
	* Chars and strings: Rotation by 0, 90, 180 or 270 degree
	* Bugfix: dog_SetVLine (Issue 55)
	* New example game: SpaceTrash
2010-10-10	v1.06	Oliver Kraus <olikraus@gmail.com>
	* Bugfix DrawArc: Multiplication fails for sizeof(int)==1 --> fixed
	* Bugfix DOG_REVERSE: Fixed an "off by one" bug
	* setContrast, setInvertPixelMode: Available in C++ interface
	* Support for DOGS102 Shield
	* dog_GetStrWidthP, dog_DrawStrP, dog_DrawRStrP: Support for
	    strings located in flash ROM area (C interface).
	* Introduced flash rom abstraction layer
	* Tested with Arduino UNO and Arduino 0021 IDE
2010-12-03	v1.07	Oliver Kraus <olikraus@gmail.com>
	* DOGM132-Shield fully supported by SpaceTrash.pde
	* ATMEGA88: SPI support and examples
	* Arduino Environment: Allow to select an IO port as chip select line
	